javascript addListerEvent updated

--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
-<!doctype html>
-<html>
+<!doctype html >
+<html id="overall" contextmenu="return false">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <title> What is Your Name App </title>
 </head>
-<body class="bg-blue-300 ">
- <div class="max-w-xl mx-auto mt-20 bg-white rounded space-y-10 p-5"> 
-<h4 id="ques" class="font-semibold text-xl">What is Your Name ?</h4>
-<input id="inputTxt" type="text" placeholder="Enter your Name" required class="px-4 py-2 rounded bg-gray-200 w-full" />
 
-<button class="px-3 py-2 rounded bg-indigo-500 text-white w-full">Proceed </button>
-</div>
-<script src="./assserts/JS/main3.js"></script>
+<body class="bg-blue-300 " id="outer" oncontextmenu="return false">
+
+  <div class="max-w-xl mx-auto mt-20 bg-white rounded space-y-10 p-5" id = "inner"> 
+
+    <h4 id="ques" class="font-semibold text-xl">What is Your Name ?</h4>
+
+    <p id="someTxt">some data</p>
+
+    <input id="inputTxt"  name="inputTxt" type="text" placeholder="Enter your Name" required 
+    class="px-4 py-2 rounded bg-gray-200 w-full" />
+
+
+    <button class="px-3 py-2 rounded bg-indigo-500 text-white w-full" >Proceed </button>
+
+  </div>
+
+  <script src="./assserts/JS/event.js"></script>
 
 </body>
 </html>
