--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     class="px-4 py-2 rounded bg-gray-200 w-full" />
 
 
-    <button class="px-3 py-2 rounded bg-indigo-500 text-white w-full" >Proceed </button>
+    <button class="px-3 py-2 rounded bg-indigo-500 text-white w-full" id="btn" >Proceed </button>
 
   </div>
 
-  <script src="./assserts/JS/event.js"></script>
+  <script src="./assserts/JS/getinput.js"></script>
 
 </body>
 </html>
